syntax = "proto3";

package edu.cmu.reedsolomonfs.server;
option java_outer_classname = "MasterserverOutter";

service MasterService {
  rpc HeartBeat(HeartbeatRequest) returns (HeartbeatResponse) {}
  rpc WriteSuccess(ackMasterWriteSuccessRequest) returns (ackMasterWriteSuccessRequestResponse) {}
//   rpc RecoveryRead(RecoveryReadRequest) returns (RecoveryReadResponse) {}
}

message HeartbeatRequest {
  string serverTag = 1;
  map<string, ChunkFileNames> chunkFileNames = 2;

  message ChunkFileNames {
    repeated string fileName = 1;
  }
}

message HeartbeatResponse {
  bool receive = 1;
}

message ackMasterWriteSuccessRequest {
  string fileName = 1;
  int64 appendAt = 2;
  int64 fileSize = 3;
  string writeFlag = 4;
}

message ackMasterWriteSuccessRequestResponse {
  bool success = 1;
}

message RecoveryReadRequest {
    string chunkFilePath = 1;
}

message RecoveryReadResponse {
    bytes chunkFileData = 1;
}

message RecoveryWriteRequest {
    string chunkFilePath = 1;
    bytes chunkFileData = 2;
}

message RecoveryWriteResponse {
    bool recoveryWriteSuccess = 1;
}

service RecoveryService {
    rpc RecoveryRead(RecoveryReadRequest) returns (RecoveryReadResponse) {}
    rpc RecoveryWrite(RecoveryWriteRequest) returns (RecoveryWriteResponse) {}
}

